@startuml
class com.example.a2family.Adapters.TaskAdapter {
- ArrayList<TaskToDo> taskToDoArrayList
- Context mContex
# FirebaseAuth mAuth
+ TaskAdapter.TaskViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(TaskViewHolder,int)
+ int getItemCount()
}
class com.example.a2family.Adapters.TaskAdapter.TaskViewHolder {
- TextView title
- TextView description
- TextView doneBy
- ImageView status
- ImageView star
- TextView created_by
- void changeStatus(ImageView)
}
class com.example.a2family.Adapters.MessageAdapter {
- ArrayList<Message> messageArrayList
- Context context
- String userID
- {static} int VIEW_ME
- {static} int VIEW_YOU
+ RecyclerView.ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(RecyclerView.ViewHolder,int)
+ void update(ArrayList<Message>)
+ int getItemViewType(int)
+ int getItemCount()
}
class com.example.a2family.Adapters.MessageAdapter.ViewHolderMe {
- TextView messageText
- TextView time
+ TextView getMessageText()
+ void setMessageText(TextView)
}
class com.example.a2family.Adapters.MessageAdapter.ViewHolderYou {
- TextView username
- TextView messageText
- TextView time
- View avatar
+ TextView getUsername()
+ void setUsername(TextView)
+ TextView getMessageText()
+ void setMessageText(TextView)
+ View getAvatar()
+ void setAvatar(View)
}
class com.example.a2family.Adapters.ProductAdapter {
~ ArrayList<Product> productArrayList
~ Context context
# FirebaseAuth mAuth
# FirebaseDatabase firebaseDatabase
# DatabaseReference databaseReference
+ ProductViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(ProductViewHolder,int)
+ int getItemCount()
}
class com.example.a2family.Adapters.ProductAdapter.ProductViewHolder {
- TextView number
- TextView name
- TextView quantity
- ImageView bought
- ImageView remove
- void bought()
}


com.example.a2family.Adapters.Adapter <|-- com.example.a2family.Adapters.TaskAdapter
com.example.a2family.Adapters.TaskAdapter +.. com.example.a2family.Adapters.TaskAdapter.TaskViewHolder
com.example.a2family.Adapters.ViewHolder <|-- com.example.a2family.Adapters.TaskAdapter.TaskViewHolder
com.example.a2family.Adapters.Adapter <|-- com.example.a2family.Adapters.MessageAdapter
com.example.a2family.Adapters.MessageAdapter +.. com.example.a2family.Adapters.MessageAdapter.ViewHolderMe
com.example.a2family.Adapters.ViewHolder <|-- com.example.a2family.Adapters.MessageAdapter.ViewHolderMe
com.example.a2family.Adapters.MessageAdapter +.. com.example.a2family.Adapters.MessageAdapter.ViewHolderYou
com.example.a2family.Adapters.ViewHolder <|-- com.example.a2family.Adapters.MessageAdapter.ViewHolderYou
com.example.a2family.Adapters.Adapter <|-- com.example.a2family.Adapters.ProductAdapter
com.example.a2family.Adapters.ProductAdapter +.. com.example.a2family.Adapters.ProductAdapter.ProductViewHolder
com.example.a2family.Adapters.ViewHolder <|-- com.example.a2family.Adapters.ProductAdapter.ProductViewHolder
@enduml